# ctos-drug-response-networks

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE-data  LIMITATIONS.md  MANIFEST.md  NONCOMPLIANCE_LEDGER.md  README.md  RELEASE_CHECKLIST.md  pyproject.toml
config/: default.yaml  fixture.yaml  paths.example.yaml
ctos_drug_response_networks/: __init__.py  cli.py  config.py  constants.py  errors.py  leakage.py  manifests.py  route_b.py  runner.py  sample_map.py  utils.py  validators.py
ctos_drug_response_networks/modules/: common.py  genomics.py  networks.py  qpcr_score.py  transcriptomics.py
data_stub/: README.md  ega_access_instructions.md  ndex_access_instructions.md
derived_data/: README.md
derived_data/drug_response/: drug_sensitivity_table.tsv  drug_sensitivity_wide.tsv
derived_data/genomics/: README.md  pathway_cna.tsv  pathway_mutations.tsv  tmb.tsv
derived_data/networks/: README.md  common_network_edges.tsv  common_network_nodes.tsv  patient_network_edges.tsv  patient_network_nodes.tsv  resistant_missing_edges.tsv
derived_data/processed_expression/: README.md  deg_shared.tsv  (+1 more)
docs/: data_provenance.md  figure_to_script_map.tsv  network_manifest.tsv  panel_support_asset_manifest.tsv  path_map.tsv  pipeline_overview.md  software_versions.tsv  source_sample_metadata.tsv
env/: requirements.txt
figures/: README.md
logs/: leakage_scan.json
scripts/: build_sample_map.sh  describe_route_b.sh  reproduce.sh  scan_leakage.sh  validate_assets.sh
tests/: test_leakage.py  test_route_b.py  test_sample_map.py  test_validate_and_smoke.py
(+44 files in other folders)
